--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "python.pythonPath": "/home/gitpod/.pyenv/versions/3.8.12/bin/python",
-    "python.formatting.provider": "black"
+    "python.formatting.provider": "autopep8"
 }
